--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,14 +1,61 @@
+<style>
+  /* Container styles */
+  #customers {
+    margin-top: 20px;
+  }
+
+  /* Customer box styles */
+  .customer-box {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .customer-box p {
+    margin: 5px 0;
+  }
+
+  .customer-box strong {
+    font-weight: bold;
+    margin-right: 5px;
+  }
+
+  /* Link styles */
+  .new-customer-link {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .new-customer-link:hover {
+    background-color: #45a049;
+  }
+</style>
+
+<!-- Notice -->
 <p style="color: green"><%= notice %></p>
 
+<!-- Heading -->
 <h1>Customers</h1>
 
+<!-- Customer list -->
 <div id="customers">
   <% @customers.each do |customer| %>
-    <%= render customer %>
-    <p>
-      <%= link_to "Show this customer", customer %>
-    </p>
+    <div class="customer-box">
+      <%= render customer %>
+      <p>
+        <%= link_to "Show this customer", customer %>
+      </p>
+    </div>
   <% end %>
 </div>
 
-<%= link_to "New customer", new_customer_path %>
+<!-- New customer link -->
+<%= link_to "New customer", new_customer_path, class: "new-customer-link" %>
